# TeamHN-RAG-Agent

./: .dockerignore  .gitignore  README.md  docker-compose.yml  generate_mock_eval.py  optimization_report.md  partial_results.json  pull-request-docs.md  report_Hung_Long.md  run.sh  task.md
backend/: .env.example  Dockerfile  eval_vinfast_real.py  evaluate_ragas.py  generate_report.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  schemas.py
backend/data/: compression_test_results.json
backend/eval/: ab_test.py  check_t1_latency.py  conflict_benchmark.py  contextual_headers_eval.py  dataset.py  drag_benchmark.py  full_pipeline_bench.py  generate_report.py  hierarchical_indices_eval.py  indexing_retrieval_bench.py  metrics.py  patch_t1_results.py  query_transformation_eval.py  relevant_segment_extraction_eval.py  run_ab_eval.py  run_all_evals.py  run_conflict_eval.py  run_eval.py  run_scholarship_full_ab_test.py  run_techniques_ab.py  run_techniques_ab_resumable.py  run_workflow_test.py  test_bge_reranker.py  test_compression.py  test_data_raw.py  test_one_question.py  test_openai.py  visualize_ab.py
backend/rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: index_mock_pdfs.py  test_conflict_hard.py
backend/storage/: emb_cache.db-shm  emb_cache.db-wal
backend/storage_ab_all_noheader/: index_meta.json
backend/storage_ab_smoke_paper_header/: emb_cache.db  index_meta.json
backend/storage_ab_smoke_paper_noheader/: emb_cache.db  index_meta.json  rag.db
backend/storage_data_hung_reducto/: index_meta.json
(+364 files in other folders)
